# LearnRayTracing

./: .gitignore  .gitmodules  CMakeLists.txt  Frame.hpp  PPM.hpp  README.md  RayTracer.hpp  build.sh  main.cpp  mainRest.cpp  testMC.cpp
.github/workflows/: main.yml
src/: AABB.hpp  BVHNode.cpp  BVHNode.hpp  CMakeLists.txt  Camera.hpp  Frame.hpp  HittableList.cpp  HittableList.hpp  LinearAlgebra.hpp  PPM.hpp  Ray.hpp  RayTracer.cpp  RayTracer.hpp
src/algorithm/: BasicFunctions.hpp  LinearAlgebra.hpp  Perlin.hpp
src/geometry/: AARect.cpp  AARect.hpp  Box.cpp  Box.hpp  CMakeLists.txt  ConstantMedium.cpp  ConstantMedium.hpp  Sphere.cpp  Sphere.hpp  Transforms.hpp
src/interface/: HitRecord.hpp  IHittable.hpp  IMaterial.hpp  IPDF.hpp  ITexture.hpp
src/io/: PPM.hpp
src/material/: Dielectric.hpp  DiffuseLight.hpp  Isotropic.hpp  Lambertian.hpp  Metal.hpp
src/pdfs/: CommonPDFs.hpp
src/texture/: CheckerTexture.hpp  ConstantTexture.hpp  ImageTexture.hpp  NoiseTexture.hpp
src/utils/: CMakeLists.txt
utils/: Logger.cpp  Logger.hpp
